--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <i class="bi bi-bell me-3"></i>
                         <div class="d-flex align-items-center">
                             <span class="me-2">Jones Ferdinand</span>
-                            <img src="https://via.placeholder.com/40" alt="profile" class="rounded-circle">
+                            <img src="https://i.pravatar.cc/100?img=12" alt="profile" class="rounded-circle" style="width: 44px; height: 44px; border: 2px solid #DFE0EB;">
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                                         <h5 class="card-title">Unresolved tickets</h5>
                                         <p class="text-muted small">Group: Support</p>
                                     </div>
-                                    <a href="#" class="text-primary">View details</a>
+                                    <a href="#" class="text-primary" data-bs-toggle="modal" data-bs-target="#ticketDetailsModal">View details</a>
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -212,12 +212,17 @@
                                         <h5 class="card-title">Tasks</h5>
                                         <p class="text-muted small">Today</p>
                                     </div>
-                                    <a href="#" class="text-primary">View all</a>
+                                    <a href="#" class="text-primary" data-bs-toggle="modal" data-bs-target="#addTaskModal">Add Task</a>
                                 </div>
                                 <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Create new task">
+                                    <form id="quickTaskForm" class="d-flex gap-2">
+                                        <input type="text" class="form-control" id="quickTaskInput" placeholder="Create new task" required>
+                                        <button type="submit" class="btn btn-primary">
+                                            <i class="bi bi-plus-lg"></i>
+                                        </button>
+                                    </form>
                                 </div>
-                                <ul class="list-group list-group-flush">
+                                <ul class="list-group list-group-flush" id="taskList">
                                     <li class="list-group-item d-flex align-items-center">
                                         <input class="form-check-input me-2" type="checkbox" id="task1">
                                         <label class="form-check-label flex-grow-1" for="task1">
@@ -243,11 +248,149 @@
                             </div>
                         </div>
                     </div>
+
+    <!-- Modal for Ticket Details -->
+    <div class="modal fade" id="ticketDetailsModal" tabindex="-1" aria-labelledby="ticketDetailsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header border-0">
+                    <h5 class="modal-title" id="ticketDetailsModalLabel">Unresolved Ticket Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-            </main>
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Ticket ID</th>
+                                    <th>Title</th>
+                                    <th>Priority</th>
+                                    <th>Status</th>
+                                    <th>Agent</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>#4238</td>
+                                    <td>Waiting on Feature Request</td>
+                                    <td><span class="badge bg-warning text-dark">HIGH</span></td>
+                                    <td>Open</td>
+                                    <td>John Smith</td>
+                                </tr>
+                                <tr>
+                                    <td>#1005</td>
+                                    <td>Awaiting Customer Response</td>
+                                    <td><span class="badge bg-secondary">MEDIUM</span></td>
+                                    <td>Pending</td>
+                                    <td>Sarah Johnson</td>
+                                </tr>
+                                <tr>
+                                    <td>#914</td>
+                                    <td>Awaiting Developer Fix</td>
+                                    <td><span class="badge bg-danger">URGENT</span></td>
+                                    <td>In Progress</td>
+                                    <td>Mike Davis</td>
+                                </tr>
+                                <tr>
+                                    <td>#281</td>
+                                    <td>Pending</td>
+                                    <td><span class="badge bg-info">LOW</span></td>
+                                    <td>Open</td>
+                                    <td>Emily Brown</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="mt-4">
+                        <h6>Summary Statistics</h6>
+                        <div class="row g-3 mt-2">
+                            <div class="col-6 col-md-3">
+                                <div class="p-3 bg-light rounded text-center">
+                                    <div class="fw-bold text-danger">Urgent</div>
+                                    <div class="h4 mb-0">1</div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-3">
+                                <div class="p-3 bg-light rounded text-center">
+                                    <div class="fw-bold text-warning">High</div>
+                                    <div class="h4 mb-0">1</div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-3">
+                                <div class="p-3 bg-light rounded text-center">
+                                    <div class="fw-bold text-secondary">Medium</div>
+                                    <div class="h4 mb-0">1</div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-3">
+                                <div class="p-3 bg-light rounded text-center">
+                                    <div class="fw-bold text-info">Low</div>
+                                    <div class="h4 mb-0">1</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer border-0">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Export Report</button>
+                </div>
+            </div>
         </div>
     </div>
 
+    <!-- Modal for Adding Task -->
+    <div class="modal fade" id="addTaskModal" tabindex="-1" aria-labelledby="addTaskModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header border-0">
+                    <h5 class="modal-title" id="addTaskModalLabel">Add New Task</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="addTaskForm">
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="taskTitle" class="form-label">Task Title</label>
+                            <input type="text" class="form-control" id="taskTitle" placeholder="Enter task title" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="taskDescription" class="form-label">Description</label>
+                            <textarea class="form-control" id="taskDescription" rows="3" placeholder="Enter task description"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="taskPriority" class="form-label">Priority</label>
+                            <select class="form-select" id="taskPriority" required>
+                                <option value="">Choose priority</option>
+                                <option value="urgent">Urgent</option>
+                                <option value="high">High</option>
+                                <option value="normal">Normal</option>
+                                <option value="low">Low</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="taskDueDate" class="form-label">Due Date</label>
+                            <input type="date" class="form-control" id="taskDueDate">
+                        </div>
+                        <div class="mb-3">
+                            <label for="taskAssignee" class="form-label">Assign to</label>
+                            <select class="form-select" id="taskAssignee">
+                                <option value="">Unassigned</option>
+                                <option value="john">John Smith</option>
+                                <option value="sarah">Sarah Johnson</option>
+                                <option value="mike">Mike Davis</option>
+                                <option value="emily">Emily Brown</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="modal-footer border-0">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Create Task</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
